--- a/despre.html
+++ b/despre.html
@@ -72,7 +72,26 @@
 
         </form>
 
-        
+        <p></p>
+            Pentru a crea liste se pot folosi tag-urile:
+        </p>
+
+        <ol type="i">
+            <li> ul - lista neordonata</li>
+            <li> ol - lista ordonata</li>
+            <li> li - item din lista</li>
+            <li> dl - lista cu descrieri</li>
+            <li> dt - termen dintr-o lista cu descrieri</li>
+            <li> dd - descrierea dintr-o lista cu descrieri</li>
+        </ol><br>
+
+        <p>
+            Pentru a insera un document HTML in altul se poate folosi tag-ul <code>&lt;iframe&gt;</code>.
+            <br />Astfel, exemplul de mai jos insereaza continutul de la adresa <a href="https://html.spec.whatwg.org/multipage/">https://html.spec.whatwg.org/multipage/ .</a>
+        </p>
+
+        <iframe src="https://html.spec.whatwg.org/multipage/" height="200" width="300" >
+        </iframe>
 
 
     </body>
