--- a/despre.html
+++ b/despre.html
@@ -90,10 +90,16 @@
             <br />Astfel, exemplul de mai jos insereaza continutul de la adresa <a href="https://html.spec.whatwg.org/multipage/">https://html.spec.whatwg.org/multipage/ .</a>
         </p>
 
-        <iframe src="https://html.spec.whatwg.org/multipage/" height="200" width="300" >
-        </iframe>
+        <iframe 
+            src="https://html.spec.whatwg.org/multipage/" 
+            height="150" 
+            width="65%" 
+            scrolling="yes">
+        </iframe> <br/>
 
-
+        <footer>
+            <p>&copy 2023. Programare web</p>
+        </footer>
     </body>
 
 </html>
