--- a/despre.html
+++ b/despre.html
@@ -5,6 +5,13 @@
     </head>
     <body>
         <h1>Psihologia Dezvoltarii si Impactul Copilariei in Viata Adulta </h1>
+
+        <nav>
+            <a href="index.html">ACASA</a> |
+            <a href="inregistreaza.html">INREGISTRARE</a> |
+            <a href="video.html">VIDEO</a> |
+            <a href="despre.html">DESPRE</a> 
+        </nav>
         <img src="psihologia_copilului.png" alt="Psihologia copilului"  width="450", height="450"/>
 
         <h2>Traumele copilăriei și efectele sale asupra dezvoltării psihice și emoționale</h2>
