--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="ro-RO">
+    <head>
+        <title>Acasa</title>
+    </head>
     <body>
         <nav>
             <a href="index.html">ACASA</a> |
@@ -13,6 +16,6 @@
             <li>VIDEO - fisiere video</li>
             <li>DESPRE - aici se ofera informatiile necesare</li>
         </ol>
-        <img src="index.jpg" height="400"/>
+        <img src="imagini/index.jpg" alt="imagine_index" height="400" >
     </body>
 </html>
