--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="ro-RO">
+    <head>
+        <title>Inregistreaza</title>
+    </head>
     <body>
         <nav>
             <a href="index.html">ACASA</a> |
@@ -45,12 +48,7 @@
 
 
             <label for="fdescriere">Descriere:</label>
-
-            <textarea>
-
-
-
-            </textarea><br>
+            <textarea id="fdescriere"></textarea><br>
 
 
 
