--- a/video.html
+++ b/video.html
@@ -1,6 +1,9 @@
 
 <!DOCTYPE html>
 <html lang="ro-RO">
+    <head>
+        <title>Video</title>
+    </head>
     <body>
         <nav>
             <a href="index.html">ACASA</a> |
@@ -9,10 +12,9 @@
             <a href="despre.html">DESPRE</a> 
         </nav>
 
-        <iframe
-        src="<iframe width="912" height="513" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
 
 
-        </iframe>
+    
     </body>
 </html>
