--- a/video.html
+++ b/video.html
@@ -12,8 +12,8 @@
             <a href="despre.html">DESPRE</a> 
         </nav>
 
-        <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-
+        <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="300" width="500"></iframe>
+       
 
     
     </body>
