--- a/desen.html
+++ b/desen.html
@@ -2,8 +2,16 @@
 <html>
 <body>
 
-<svg width="100" height="100">
-  <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+
+
+<svg width="450" height="450">
+    <rect x="90" y="150" width="300" height="250"  fill="black" />
+    <polygon points="50, 150, 430, 150, 240, 20" style="fill :black;stoke-width:3" />
+    <rect x="135" y="40" width="45" height="75" fill="black"/>
+    <circle r="20" cx="155" cy="180" fill="white"/>
+    <circle r="20" cx="325" cy="180" fill="white"/>
+    <circle r="15" cx="240" cy="245" fill="white"/>
+   
 </svg>
 
 </body>
