laboratorul 3 finalizat, predat

--- a/despre.html
+++ b/despre.html
@@ -75,17 +75,20 @@
         </p>
 
         <form>
-            <label for="fnume">Nume:</label>
-            <input type="text" id="fnume" name="fnume" value="nume"><br>
+            <label for="lastname">Nume:</label>
+            <input type="text" id="lastname" name="lastname"><br>
 
-            <label for="femail">Email:</label>
-            <input type="text" id="femail" name="femail" value="@gmail.com"><br>
+            <label for="firstname">Prenume:</label>
+            <input type="text" id="firstname" name="firstname"><br>
 
-            <label for="fparola">Parola:</label>
-            <input type="password" id="fparola" name="fparola" value="fparola"><br>
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" value="@gmail.com"><br>
 
-            <label for="fatasament">Ce stil de atasament crezi ca ai?</label>
-            <select id="fatasament" name="fatasament">
+            <label for="pass">Parola:</label>
+            <input type="password" id="pass" name="pass" value="pass"><br>
+
+            <label for="attachment">Ce stil de atasament crezi ca ai?</label>
+            <select id="attachment" name="attachment">
                 <option value="sigur">Sigur</option>
                 <option value="anxios">Anxios</option>
                 <option value="evitant">Evitant</option>
@@ -94,20 +97,20 @@
             </select><br>
 
             <label>Puneti-va aceste intrebari: </label><br>
-            <input type="checkbox" id="fintrebare1" name="fintrebare1">
-            <label for="fintrebare1">Imi este usor sa am incredere in oameni?</label><br>
+            <input type="checkbox" id="fq1" name="fq1">
+            <label for="fq1">Imi este usor sa am incredere in oameni?</label><br>
 
-            <input type="checkbox" id="fintrebare2" name="fintrebare2">
-            <label for="fintrebare2">Imi este frica de abandon?</label><br>
+            <input type="checkbox" id="fq2" name="fq2">
+            <label for="fq2">Imi este frica de abandon?</label><br>
 
-            <input type="checkbox" id="fintrebare3" name="fintrebare3">
-            <label for="fintrebare3">Ma simt inconfortabil se depinde de cineva?</label><br>
+            <input type="checkbox" id="fq3" name="fq3">
+            <label for="fq3">Ma simt inconfortabil se depinde de cineva?</label><br>
 
-            <label for="fexperienta">Impartaseste experienta ta:</label>
-            <textarea id="fexperienta"> </textarea><br>
+            <label for="experience">Impartaseste experienta ta:</label>
+            <textarea id="experience"> </textarea><br>
 
-            <input type="radio" id="conditie" name="conditie">
-            <label for="conditie">Sunt de acord cu conditiile</label><br><br>
+            <input type="radio" id="condition" name="condition">
+            <label for="condition">Sunt de acord cu conditiile</label><br><br>
             
             <button type="submit">Inregistreaza</button><br>
 
