--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -14,70 +14,70 @@
         <form>
             <fieldset>
                 <legend>Informatii generale</legend>
-                <label for="fnume_utilizator">Nume utilizator:</label>
-                <input type="text" id="fnume_utilizator" name="fnume_utilizator"><br>
+                <label for="username">Nume utilizator:</label>
+                <input type="text" id="username" name="username"><br>
 
-                <label for="fparola">Parola:</label>
-                <input type="password" id="fparola" name="fparola" value="fparola"><br>
+                <label for="pass">Parola:</label>
+                <input type="password" id="pass" name="pass"><br>
 
-                <label for="fnume">Nume:</label>
-                <input type="text" id="fnume" name="fnume" value="nume"><br>
+                <label for="lastname">Nume:</label>
+                <input type="text" id="lastname" name="lastname"><br>
 
-                <label for="fprenume">Prenume:</label>
-                <input type="text" id="fprenume" name="fprenume" value="prenume"><br>
+                <label for="firstname">Prenume:</label>
+                <input type="text" id="firstname" name="firstname"><br>
 
-                <label for="femail">Email</label>
-                <input type="text" id="femail" name="femail" value="@gmail.com"><br>
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email"><br>
 
-                <label for="ftelefon">Telefon</label>
-                <input type="tel" id="ftelefon" name="ftelefon"><br>
+                <label for="phone">Telefon</label>
+                <input type="tel" id="phone" name="phone"><br>
 
             </fieldset><br>
 
             <fieldset>
                 <legend>Informatii personale</legend>
 
-                <label for="fsexul">Sexul:</label>
-                <select id="fsexul" name="fsexul">
+                <label for="gender">Sexul:</label>
+                <select id="gender" name="gender">
                     <option value="femeie">Femeie</option>
                     <option value="barbat">Barbat</option>
                 </select><br>
 
-                <label for="fmancare">Mancarea preferata:</label>
-                <input list="fmancaruri" name="fmancare" id="fmancare" />
+                <label for="food">Mancarea preferata:</label>
+                <input list="food" id="food" name="food"  />
                 <datalist id="fmancaruri">
                     <option value="Pizza"></option>
                     <option value="Burger"></option>
                     <option value="Sushi"></option>
                 </datalist><br>
 
-                <label for="fculoarea">Culoarea preferata:</label>
-                <select id="fculoarea" name="fculoarea">
+                <label for="color">Culoarea preferata:</label>
+                <select id="color" name="color">
                     <option value="rosu">Rosu</option>
                     <option value="galben">Galben</option>
                     <option value="verde">verde</option>
                     <option value="albastru">albastru</option>
                 </select><br>
 
-                <label for="fdata_nasterii">Data nasterii</label>
-                <input type="date" id="fdata_nasterii" name="fdata_nasterii"><br>
+                <label for="birthdate">Data nasterii</label>
+                <input type="date" id="birthdate" name="birthdate"><br>
 
-                <label for="fora_nasterii">Ora nasterii</label>
-                <input type="time" id="fora_nasterii" name="fora_nasterii"><br>
+                <label for="birthtime">Ora nasterii</label>
+                <input type="time" id="birthtime" name="birthtime"><br>
 
 
-                <label for="fvarsta">Varsta (10-80)</label>
-                <input type="range" id="fvarsta" name="fvarsta" min="10" max="80"><br>
+                <label for="age">Varsta (10-80)</label>
+                <input type="range" id="age" name="age" min="10" max="80"><br>
 
-                <label for="fadresa_paginii">Adresa paginii personale: </label>
-                <input type="url" id="fadresa_paginii" name="fadresa_paginii"><br>
+                <label for="homepage">Adresa paginii personale: </label>
+                <input type="url" id="homepage" name="homepage"><br>
 
-                <label for="fdescriere">Descriere:</label>
-                <textarea id="fdescriere"></textarea><br>
+                <label for="description">Descriere:</label>
+                <textarea id="description"></textarea><br>
 
             </fieldset><br>
-            <input type="checkbox" id="conditie" name="conditie">
-            <label for="conditie">Sunt de acord cu conditiile</label><br>
+            <input type="checkbox" id="condition" name="condition">
+            <label for="condition">Sunt de acord cu conditiile</label><br>
             
             <button type="submit" disabled>Inregistreaza</button><br>
 
