laboratorul 3 finalizat, predat, validat!

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro-RO">
     <head>
+        <meta charset="UTF-8">
         <title>Acasa</title>
     </head>
     <body>
@@ -8,7 +9,8 @@
             <a href="index.html">ACASA</a> |
             <a href="inregistreaza.html">INREGISTRARE</a> |
             <a href="video.html">VIDEO</a> |
-            <a href="despre.html">DESPRE</a> 
+            <a href="despre.html">DESPRE</a> |
+            <a href="desen.html">DESEN</a>
         </nav>
         <h2>Continutul site-ului</h2>
         <ol type="a">
