--- a/video.html
+++ b/video.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ro-RO">
     <head>
+        <meta charset="UTF-8">
         <title>Video</title>
     </head>
     <body>
@@ -9,7 +10,8 @@
             <a href="index.html">ACASA</a> |
             <a href="inregistreaza.html">INREGISTRARE</a> |
             <a href="video.html">VIDEO</a> |
-            <a href="despre.html">DESPRE</a> 
+            <a href="despre.html">DESPRE</a> |
+            <a href="desen.html">DESEN</a>
         </nav>
 
         <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="300" width="500"></iframe>
