--- a/despre.html
+++ b/despre.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro-RO">
     <head>
+        <meta charset="UTF-8">
         <title>Psihologia Dezvoltarii si Impactul Copilariei in Viata Adulta </title>
     </head>
     <body>
@@ -10,7 +11,8 @@
             <a href="index.html">ACASA</a> |
             <a href="inregistreaza.html">INREGISTRARE</a> |
             <a href="video.html">VIDEO</a> |
-            <a href="despre.html">DESPRE</a> 
+            <a href="despre.html">DESPRE</a> |
+            <a href="desen.html">DESEN</a>
         </nav>
 
         <img 
