--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro-RO">
     <head>
+        <meta charset="UTF-8">
         <title>Inregistreaza</title>
     </head>
     <body>
@@ -8,7 +9,8 @@
             <a href="index.html">ACASA</a> |
             <a href="inregistreaza.html">INREGISTRARE</a> |
             <a href="video.html">VIDEO</a> |
-            <a href="despre.html">DESPRE</a> 
+            <a href="despre.html">DESPRE</a> |
+            <a href="desen.html">DESEN</a>
         </nav><br>
 
         <form>
@@ -44,8 +46,8 @@
                 </select><br>
 
                 <label for="food">Mancarea preferata:</label>
-                <input list="food" id="food" name="food"  />
-                <datalist id="fmancaruri">
+                <input list="foods" id="food" name="food"  />
+                <datalist id="foods">
                     <option value="Pizza"></option>
                     <option value="Burger"></option>
                     <option value="Sushi"></option>
