ce am lucrat la lab 4

--- a/desen.html
+++ b/desen.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Desen</title>
+        <link rel="stylesheet" type="text/css" href="css/stil.css">
+
     </head>
 
     <body>
@@ -11,7 +13,7 @@
             <a href="index.html">ACASA</a> |
             <a href="inregistreaza.html">INREGISTRARE</a> |
             <a href="video.html">VIDEO</a> |
-            <a href="despre.html">DESPRE</a> 
+            <a href="despre.html">DESPRE</a> |
             <a href="desen.html">DESEN</a>
         </nav>
         
