--- a/despre.html
+++ b/despre.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Psihologia Dezvoltarii si Impactul Copilariei in Viata Adulta </title>
+        <link rel="stylesheet" type="text/css" href="css/stil.css">
     </head>
     <body>
         <h1>Psihologia Dezvoltarii si Impactul Copilariei in Viata Adulta </h1>
 
-        <nav>
+        <nav> 
             <a href="index.html">ACASA</a> |
             <a href="inregistreaza.html">INREGISTRARE</a> |
             <a href="video.html">VIDEO</a> |
             <a href="despre.html">DESPRE</a> |
             <a href="desen.html">DESEN</a>
-        </nav>
+        </nav><br>
 
         <img 
         src="imagini/psihologia_copilului.png" 
