--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Inregistreaza</title>
+        <link rel="stylesheet" type="text/css" href="css/stil.css">
     </head>
     <body>
         <nav>
