--- a/video.html
+++ b/video.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Video</title>
+        <link rel="stylesheet" type="text/css" href="css/stil.css">
+
     </head>
     <body>
         <nav>
