--- a/templateCSS.html
+++ b/templateCSS.html
@@ -10,17 +10,18 @@
     <body>
         <header>
             <p>Header</p>
-            <nav>
-                <a href="index.html">ACASA</a> |
-                <a href="inregistreaza.html">INREGISTRARE</a> |
-                <a href="video.html">VIDEO</a> |
-                <a href="despre.html">DESPRE</a> |
-                <a href="desen.html">DESEN</a>
-            </nav>
         </header><br>
-        
+
+        <nav>
+            <a href="index.html">ACASA</a> 
+            <a href="inregistreaza.html">INREGISTRARE</a>
+            <a href="video.html">VIDEO</a> 
+            <a href="despre.html">DESPRE</a> 
+            <a href="desen.html">DESEN</a>
+        </nav><br>
+
         <main>
-            <p>Main</p><br>
+            
             <article>
                 <p>Article</p>
 
@@ -36,7 +37,7 @@
                     <p>Section3</p>
                 </section><br>
 
-            </article><br>
+            </article>
 
             <aside>
                 <p>Aside</p>
