ce am lucrat la lab 5

--- a/desen.html
+++ b/desen.html
@@ -10,11 +10,12 @@
 
     <body>
         <nav>
-            <a href="index.html">ACASA</a> |
-            <a href="inregistreaza.html">INREGISTRARE</a> |
-            <a href="video.html">VIDEO</a> |
-            <a href="despre.html">DESPRE</a> |
+            <a href="index.html">ACASA</a> 
+            <a href="inregistreaza.html">INREGISTRARE</a>
+            <a href="video.html">VIDEO</a>
+            <a href="despre.html">DESPRE</a> 
             <a href="desen.html">DESEN</a>
+            <a href="invat.html">INVAT</a>
         </nav>
         
         <svg height="600" width="600">
