--- a/video.html
+++ b/video.html
@@ -9,11 +9,12 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">ACASA</a> |
-            <a href="inregistreaza.html">INREGISTRARE</a> |
-            <a href="video.html">VIDEO</a> |
-            <a href="despre.html">DESPRE</a> |
+            <a href="index.html">ACASA</a> 
+            <a href="inregistreaza.html">INREGISTRARE</a>
+            <a href="video.html">VIDEO</a> 
+            <a href="despre.html">DESPRE</a> 
             <a href="desen.html">DESEN</a>
+            <a href="invat.html">INVAT</a>
         </nav>
 
         <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="300" width="500"></iframe>
