--- a/despre.html
+++ b/despre.html
@@ -9,11 +9,12 @@
         <h1>Psihologia Dezvoltarii si Impactul Copilariei in Viata Adulta </h1>
 
         <nav> 
-            <a href="index.html">ACASA</a> |
-            <a href="inregistreaza.html">INREGISTRARE</a> |
-            <a href="video.html">VIDEO</a> |
-            <a href="despre.html">DESPRE</a> |
+            <a href="index.html">ACASA</a> 
+            <a href="inregistreaza.html">INREGISTRARE</a>
+            <a href="video.html">VIDEO</a> 
+            <a href="despre.html">DESPRE</a> 
             <a href="desen.html">DESEN</a>
+            <a href="invat.html">INVAT</a>
         </nav><br>
 
         <img 
