--- a/inregistreaza.html
+++ b/inregistreaza.html
@@ -7,11 +7,12 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">ACASA</a> |
-            <a href="inregistreaza.html">INREGISTRARE</a> |
-            <a href="video.html">VIDEO</a> |
-            <a href="despre.html">DESPRE</a> |
+            <a href="index.html">ACASA</a> 
+            <a href="inregistreaza.html">INREGISTRARE</a>
+            <a href="video.html">VIDEO</a> 
+            <a href="despre.html">DESPRE</a> 
             <a href="desen.html">DESEN</a>
+            <a href="invat.html">INVAT</a>
         </nav><br>
 
         <form>
