ce am lucrat la lab7

--- a/continut/index.html
+++ b/continut/index.html
@@ -13,17 +13,18 @@
         <meta charset="UTF-8">
         <title>Invat</title>
         <link rel="stylesheet" type="text/css" href="css/stil2.css">
+        <script src="continut/js/script.js"></script>
     </head>
 
     <body>
         <div class="navbar">
             <a href="#" id="logo"> <img src="imagini/logo.jpg"></a>
-            <a href="index.html">ACASA</a> 
-            <a href="inregistreaza.html">INREGISTRARE</a>
-            <a href="video.html">VIDEO</a> 
-            <a href="despre.html">DESPRE</a> 
-            <a href="desen.html">DESEN</a>
-            <a href="invat.html">INVAT</a>
+            <a href="" onclick="schimbaContinut('acasa')">ACASA</a> 
+            <a href="" onclick="schimbaContinut('inregistreaza')">INREGISTRARE</a>
+            <a href="" onclick="schimbaContinut('video')">VIDEO</a> 
+            <a href="" onclick="schimbaContinut('despre')">DESPRE</a> 
+            <a href="" onclick="schimbaContinut('desen')">DESEN</a>
+            <a href="" onclick="schimbaContinut('invat')">INVAT</a>
         </div>
 
         <header>
