--- a/continut/despre.html
+++ b/continut/despre.html
@@ -13,7 +13,7 @@
         <meta charset="UTF-8">
         <title>Invat</title>
         <link rel="stylesheet" type="text/css" href="css/stil2.css">
-        
+        <script src="script.js"></script>
     </head>
 
     <body>
