ce am lucrat la lab8 (am terminat tema2 de la lab7)

--- a/continut/acasa.html
+++ b/continut/acasa.html
@@ -1,7 +1,6 @@
-            <ol type="a">
-                <li>INREGISTRARE - creare cont pe site</li>
-                <li>VIDEO - fisiere video</li>
-                <li>DESPRE - aici se ofera informatiile necesare</li>
-            </ol>
-            <img src="imagini/index.jpg" alt="imagine_index" height="400" >
-     
+<ol type="a">
+  <li>INREGISTRARE - creare cont pe site</li>
+  <li>VIDEO - fisiere video</li>
+  <li>DESPRE - aici se ofera informatiile necesare</li>
+</ol>
+<img src="imagini/index.jpg" alt="imagine_index" height="400" />
