--- a/continut/video.html
+++ b/continut/video.html
@@ -1,2 +1,5 @@
-            <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="300" width="500"></iframe>
-       
+<iframe
+  src="https://www.youtube.com/embed/N2oUfg7qNG0"
+  height="300"
+  width="500"
+></iframe>
