--- a/continut/index.html
+++ b/continut/index.html
@@ -13,18 +13,19 @@
         <meta charset="UTF-8">
         <title>Invat</title>
         <link rel="stylesheet" type="text/css" href="css/stil2.css">
-        <script src="continut/js/script.js"></script>
+        <script src="js/script.js"></script>
     </head>
 
-    <body>
+    <body onload="schimbaContinut('acasa')">
         <div class="navbar">
             <a href="#" id="logo"> <img src="imagini/logo.jpg"></a>
-            <a href="" onclick="schimbaContinut('acasa')">ACASA</a> 
-            <a href="" onclick="schimbaContinut('inregistreaza')">INREGISTRARE</a>
-            <a href="" onclick="schimbaContinut('video')">VIDEO</a> 
-            <a href="" onclick="schimbaContinut('despre')">DESPRE</a> 
-            <a href="" onclick="schimbaContinut('desen')">DESEN</a>
-            <a href="" onclick="schimbaContinut('invat')">INVAT</a>
+            <a href="#" onclick="schimbaContinut('acasa')">ACASA</a> 
+            <a href="#" onclick="schimbaContinut('inregistreaza')">INREGISTRARE</a>
+            <a href="#" onclick="schimbaContinut('video')">VIDEO</a> 
+            <a href="#" onclick="schimbaContinut('despre')">DESPRE</a> 
+            <a href="#" onclick="schimbaContinut('desen')">DESEN</a>
+            <a href="#" onclick="schimbaContinut('invat')">INVAT</a>
+            <a href="#" onclick="schimbaContinut('persoane', 'js/persoane.js', 'incarcaPersoane')">PERSOANE</a>
         </div>
 
         <header>
