creare layout2 si css

--- a/continut/index.html
+++ b/continut/index.html
@@ -30,8 +30,9 @@
 
         <header>
             <div class="title">
-                <h1>Hello World</h1>
+                <h1>Traumele copilăriei și efectele sale asupra dezvoltării psihice și emoționale</h1>
             </div>
+
             <div class="home_page_image">
                 <img src="imagini/psihologia_copilului.png" 
                     alt="Psihologia copilului"
@@ -45,7 +46,13 @@
         </main>
 
         <footer>
+
+
+
             © copyright w3schools.com
+
+
+            
         </footer>
     </body>
 </html>
