actualizare structura pagini pe baza noului layout (2)

--- a/continut/acasa.html
+++ b/continut/acasa.html
@@ -1,6 +1,37 @@
-<ol type="a">
-  <li>INREGISTRARE - creare cont pe site</li>
-  <li>VIDEO - fisiere video</li>
-  <li>DESPRE - aici se ofera informatiile necesare</li>
-</ol>
-<img src="imagini/index.jpg" alt="imagine_index" height="400" />
+<div id="section5">
+  <h3>What you need now is <i>ease</i>. I’m here to help you <i>simplify</i> the process as you begin your journey.</h3>
+  <div id="section5box">
+
+    <div class="section5box1">
+        <div id="section5box1a">
+            <h3>INREGISTRARE</h3>
+            <p> Lorem ipsum odor amet consectetuer adipiscing eli lorem ipsum dolor sit amet, consectetur labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+        </div>
+        <div id="section5box1b">
+            <h3>VIDEO</h3>
+            <p>Natoque dictumst nascetur placerat aenean suscipit. Curae augue torquent habitasse ullamcorper duis auctor condimentum interdum faucibus erat sapien; aenean sit.</p>
+        </div>
+        <div id="section5box1c">
+            <h3>DESPRE</h3>
+            <p>Penatibus nibh inceptos potenti curae nibh varius eros lacus. Eros semper a magnis consectetur ante ante. Class vitae nibh dictumst nunc quam pulvinar est. Risus donec blandit.</p>
+        </div>
+    </div>
+
+    <div class="section5box2">
+        <div id="section5box2a">
+            <h3>DESEN</h3>
+            <p> Lorem ipsum odor amet consectetuer adipiscing eli lorem ipsum dolor sit amet, consectetur labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+        </div>
+        <div id="section5box2b">
+            <h3>INVAT</h3>
+            <p>Natoque dictumst nascetur placerat aenean suscipit. Curae augue torquent habitasse ullamcorper duis auctor condimentum interdum faucibus erat sapien; aenean sit.</p>
+        </div>
+        <div id="section5box2c">
+            <h3>PERSOANE</h3>
+            <p>Penatibus nibh inceptos potenti curae nibh varius eros lacus. Eros semper a magnis consectetur ante ante. Class vitae nibh dictumst nunc quam pulvinar est. Risus donec blandit.</p>
+        </div>
+    </div>
+
+  </div>
+  
+</div><br><br>
