--- a/continut/persoane.html
+++ b/continut/persoane.html
@@ -1,4 +1,9 @@
-<div class="persoaneDiv1">
-<p id="paragraf"><i>Se încarcă. Vă rugăm așteptați...</i></p>
-<table id="tabelPersoane"></table>
-</div>
+<div id="section9">
+    <div id="section9a">
+        <p id="section9aParagraf"><i>Se încarcă. Vă rugăm așteptați...</i></p>
+    </div>
+
+    <div id="section9b">
+        <table id="section9bTabelPersoane"></table>
+    </div>
+</div> 
