--- a/continut/video.html
+++ b/continut/video.html
@@ -1,5 +1,29 @@
-<iframe
-  src="https://www.youtube.com/embed/N2oUfg7qNG0"
-  height="300"
-  width="500"
-></iframe>
+<div id="section7">
+  <div id="section7a">
+      <div id="section7aVideo1">
+          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+      </div>
+
+      <div id="section7aVideo2">
+          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+      </div>
+
+      <div id="section7aVideo3">
+          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+      </div>
+  </div>
+
+  <div id="section7b">
+      <div id="section7bVideo1">
+          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+      </div>
+
+      <div id="section7bVideo2">
+          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+      </div>
+
+      <div id="section7bVideo3">
+          <iframe src="https://www.youtube.com/embed/N2oUfg7qNG0" height="200" width="300"></iframe>
+      </div>
+  </div>
+</div>
