tema 3 lab 5 finalizata (tabel) + continut DESPRE actualizat

--- a/continut/index.html
+++ b/continut/index.html
@@ -19,7 +19,7 @@
 
     <body onload="schimbaContinut('acasa')">
         <div class="navbar">
-            <a href="#" id="logo"> <img src="imagini/logo.jpg"></a>
+            <a href="#" id="logo"> <img src="imagini/logo.jpg" alt="logo"></a>
             <a href="#" onclick="schimbaContinut('acasa')">ACASA</a> 
             <a href="#" onclick="schimbaContinut('inregistreaza')">INREGISTRARE</a>
             <a href="#" onclick="schimbaContinut('video')">VIDEO</a> 
@@ -31,8 +31,8 @@
 
         <div class="header" id="headerContinut">
             <div id="header1">
-                <h2>Traumele copilăriei și efectele sale asupra<i>dezvoltării psihice</i> și <i>emoționale</i>.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
+                <h2>Traumele copilăriei și efectele sale asupra <i>dezvoltării psihice</i> și <i>emoționale</i>.</h2>
+                <p>Copilăria ne modelează întreaga viață. Experiențele timpurii, fie ele fericite sau dureroase, își lasă amprenta asupra felului în care gândim, simțim și relaționăm. Aici vei descoperi informații despre traumele copilăriei, efectele lor asupra dezvoltării emoționale și psihice și pașii pe care îi putem face spre vindecare.</p>
             </div>
 
             <div id="header2">
