--- a/continut/layout2.html
+++ b/continut/layout2.html
@@ -21,7 +21,7 @@
 <body>
 
     <div class="navbar">
-            <a href="#" id="logo"> <img src="imagini/logo.jpg"></a>
+            <a href="#" id="logo"> <img src="imagini/logo.jpg" alt="logo"></a>
             <a href="#" onclick="schimbaContinut('acasa')">ACASA</a> 
             <a href="#" onclick="schimbaContinut('inregistreaza')">INREGISTRARE</a>
             <a href="#" onclick="schimbaContinut('video')">VIDEO</a> 
@@ -32,9 +32,14 @@
         </div>
 
     <div class="header" id="headerContinut">
-        <div class="title">
-            <h1>Header Title</h1>
-        </div>
+        <div id="header1">
+                <h2>Traumele copilăriei și efectele sale asupra <i>dezvoltării psihice</i> și <i>emoționale</i>.</h2>
+                <p>Copilăria ne modelează întreaga viață. Experiențele timpurii, fie ele fericite sau dureroase, își lasă amprenta asupra felului în care gândim, simțim și relaționăm. Aici vei descoperi informații despre traumele copilăriei, efectele lor asupra dezvoltării emoționale și psihice și pașii pe care îi putem face spre vindecare.</p>
+            </div>
+
+            <div id="header2">
+                <img src="imagini/psihologia_copilului.png" alt="imagineHeader" width="300" height="300" id="imagineHeader">
+            </div>
     </div>
 
     <div class="main" id="mainContinut">
@@ -76,58 +81,101 @@
 
             <div id="section2">
                 <div id="section2a">
-                    <h3>You're here because dolor lacus cubilia morbi porttitor eros accumsan orci.</h3>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco re magna aliqua. </p>
+                    <h3>Comportamente din viața de zi cu zi ale părinților și efectele lor asupra copilului</h3>
+                    <p>În mod frecvent, comportamentele părinților și ale altor figuri importante din viața unui copil au un impact direct asupra dezvoltării acestuia. Părinții care sunt absenți din punct de vedere emoțional sau fizic, care aplică pedepse fizice sau verbale, care nu răspund nevoilor copilului sau care oferă un mediu instabil și nesigur contribuie la dezvoltarea unor traume care se pot manifesta pe termen lung.</p>
+                    <p>Un părinte care este constant critic sau care neglijează nevoile emoționale ale copilului poate duce la dezvoltarea unui <b>sentiment de neajutorare</b> și la o stimă de sine scăzută. Pe de altă parte, un părinte care este supraprotectiv poate inhiba dezvoltarea autonomiei și a abilității copilului de a face față provocărilor vieții.</p>
+                    <p>Comportamentele pozitive ale părinților, cum ar fi oferirea de afecțiune constantă, încurajarea unui comportament adecvat și răspunsurile sensibile la nevoile copilului pot contribui la dezvoltarea unei personalități sănătoase și echilibrate. De asemenea, părinții care modelează un comportament empatic și care îi învață pe copii să își gestioneze emoțiile sunt mai susceptibili să ajute la dezvoltarea unui atașament securizant.</p>
                 </div>
 
                 <div id="section2b">
                     <div id="section2bimg">
-                        <img src="imagini/psihologia_copilului.png" alt="imagine2" height="350" width="350" id="section2bImg">
+                        <img src="imagini/trauma.jpg" alt="trauma" height="350" width="350" id="section2bImg">
                     </div>
                     <div id="section2btext">
-                        <h2>Sound familiar?</h2>
-                        <ol id="section2bTextList">
-                            <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </li>
-                            <li>Diam efficitur metus sociosqu nunc tincidunt fringilla taciti habitasse non. Scelerisque conubia pretium porttitor taciti condimentum.</li>
-                            <li>Himenaeos cubilia tortor id ligula aenean maximus nec. Sem nam cubilia aliquet aliquet id varius fermentum variu.</li>
-                            <li>Fusce orci himenaeos commodo ultricies sagittis dictum mollis in. Tincidunt inceptos nostra himenaeos aptent habitasse netus.</li>
+                        <h2><i>Tipuri de traume și impactul lor asupra dezvoltării emoționale</i></h2>
+                        <p>Traumele pot fi împărțite în mai multe categorii, fiecare având un impact diferit asupra individului. Acestea pot include:</p>
+                        <ol class="sectionList" id="section2bTextList">
+                            <li> Traumele fizice: Abuzul fizic sau violența pot lăsa cicatrici fizice și emoționale profunde. Copiii care suferă abuzuri fizice pot dezvolta un sentiment constant de frică și pot experimenta o incapabilitate de a avea încredere în ceilalți.</li>
+                            <li> Traumele emoționale: Acestea includ abuzul psihologic, criticile constante, umilirea sau refuzul de a oferi afecțiune și sprijin emoțional. Un copil care suferă astfel de traume poate dezvolta o stimă de sine scăzută, anxietate sau depresie.</li>
+                            <li> Traumele de abandon: Părinții sau figurele de atașament care părăsesc copilul, fie fizic, fie emoțional, pot genera traume de abandon. Aceste traume pot duce la un comportament de dependență excesivă față de alții sau la evitarea relațiilor intime din teama de a nu fi abandonat din nou.</li>
+                            <li> Traumele de neglijență: Când părinții nu răspund la nevoile de bază ale copilului (nutriție, igienă, educație, siguranță emoțională), copilul poate dezvolta dificultăți în formarea unei imagini pozitive despre sine și poate avea dificultăți în a se conecta cu ceilalți.</li>
+
                         </ol>
                     </div>
                 </div>
             </div>
-
-            <div id="section3">
+<!--            <div id="section3">
                 <div id="section3a">
-                    <h3>I believe you have the power to create a safe haven <i>within yourself</i>.</h3>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Re magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco. Re magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
+                    <h3><i>Cum se manifestă traumele copilăriei în viața adultă?</i></h3>
+                    <p>Traumele din copilărie pot avea un impact semnificativ asupra comportamentului adultului, chiar și atunci când acestea nu sunt conștientizate sau procesate în mod corespunzător. Printre efectele posibile se numără: </p>
+                    <ol class="sectionList">
+                        <li><b>Probleme de relaționare</b>: Persoanele care au suferit traume pot dezvolta dificultăți în a stabili relații sănătoase. Aceștia pot fi excesiv de dependenți de parteneri sau pot evita intimitatea emoțională, temându-se de respingere sau abandon</li>
+                        <li><b>Dificultăți în gestionarea emoțiilor</b>: : Lipsa unui atașament securizant poate duce la dificultăți în a face față stresului, anxietății sau depresiei. Aceste persoane pot dezvolta comportamente de evaziune sau pot experimenta atacuri de panică</li>
+                        <li><b>Comportamente autodistructive</b>: : În cazul unui trauma profundă, unele persoane pot recurge la comportamente autodistructive, cum ar fi abuzul de substanțe, comportamente alimentare distructive sau auto-vătămarea, ca metodă de a face față durerii emoționale nerezolvate.</li>
+                        <li><b>Dificultăți în încrederea în propria persoană și în ceilalți</b>: Traumele din copilărie pot crea un sentiment de insecuritate și o lipsă de încredere în propriile abilități sau în intențiile celor din jur, afectând capacitatea de a construi relații sănătoase</li>
+                    </ol>
                     <button id="section3aButton">LEARN MORE ABOUT ME</button>
                 </div>
                 <div id="section3b">
                     <img src="imagini/index.jpg" alt="imagine3" width="300" height="300" id="section3bImg">
                 </div>
             </div>
+        -->
+
+        <div id="section3">
+            <div id="section3a">
+                <h3><i>Cum se manifestă traumele copilăriei în viața adultă?</i></h3>
+                <p>Traumele din copilărie pot avea un impact semnificativ asupra comportamentului adultului, chiar și atunci când acestea nu sunt conștientizate sau procesate în mod corespunzător. Printre efectele posibile se numără: </p>
+                  <ol class="sectionList">
+                    <li><b>Probleme de relaționare</b>: Persoanele care au suferit traume pot dezvolta dificultăți în a stabili relații sănătoase. Aceștia pot fi excesiv de dependenți de parteneri sau pot evita intimitatea emoțională, temându-se de respingere sau abandon</li>
+                    <li><b>Dificultăți în gestionarea emoțiilor</b>: : Lipsa unui atașament securizant poate duce la dificultăți în a face față stresului, anxietății sau depresiei. Aceste persoane pot dezvolta comportamente de evaziune sau pot experimenta atacuri de panică</li>
+                    <li><b>Comportamente autodistructive</b>: : În cazul unui trauma profundă, unele persoane pot recurge la comportamente autodistructive, cum ar fi abuzul de substanțe, comportamente alimentare distructive sau auto-vătămarea, ca metodă de a face față durerii emoționale nerezolvate.</li>
+                    <li><b>Dificultăți în încrederea în propria persoană și în ceilalți</b>: Traumele din copilărie pot crea un sentiment de insecuritate și o lipsă de încredere în propriile abilități sau în intențiile celor din jur, afectând capacitatea de a construi relații sănătoase</li>
+                </ol>
+                <!--<button id="section3aButton">LEARN MORE ABOUT ME</button> -->
+            </div>
+            <div id="section3b">
+                <div id="section3b1">
+                    <img src="imagini/relationshipProblems.jpg" alt="relationshipProblems" width="200" height="200" id="section3bImg2" class="section3bImg">
+                    <img src="imagini/emotionsHandling.jpg" alt="emotionsHandling" width="190" height="200" id="section3bImg1" class="section3bImg">
+                </div>
+                
+                <div id="section3b2">
+                    <img src="imagini/selfDestructive.jpg" alt="selfDestructive" width="260" height="200" id="section3bImg3" class="section3bImg">
+                    <img src="imagini/trust.jpg" alt="trust" width="230" height="200" id="section3bImg4" class="section3bImg">
+                </div>
+            </div>
+        </div>
+
 
             <div id="section4">
-                <h2>How can I help?</h2><br>
+                <h2>Stiluri de atașament și importanța lor în dezvoltarea psihică</h2><br>
+                <p>Teoria atașamentului, propusă de John Bowlby, sugerează că relațiile afective pe care copilul le formează cu părinții sau cu alte figuri de atașament în primii ani de viață sunt <b>fundamentale</b> pentru dezvoltarea psihologică ulterioară. <br> Aceste relații influențează modul în care individul va percepe și va răspunde la emoțiile proprii și ale altora.
+                    Bowlby a identificat <b>patru stiluri principale de atașament</b>, care pot apărea în funcție de comportamentele părinților și de răspunsurile acestora la nevoile copilului:</p>
                 <div id="section4box">
                     <div id="section4a">
-                        <h2>IFS Therapy</h2>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Re magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco. Re magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
-                        <button class="section4Buttons" id="section4aButton">LEARN MORE</button> 
+                        <h2>Atașament sigur</h2>
+                        <p> Se formează atunci când părintele este disponibil emoțional, receptiv și previzibil. <br> Copilul se simte în siguranță să exploreze lumea, știe că poate cere ajutor și îl va primi. <br> În <b>viața adultă</b>: persoană încrezătoare, capabilă de relații sănătoase și echilibru emoțional.</p>
+                        <img src="imagini/atasamentSigur.jpg" height="200" width="200" alt="atasamentSigur" id="section4aImg" class="section4boxImages">
+                        <!-- <button class="section4Buttons" id="section4aButton">LEARN MORE</button> -->
                     </div>
                     <div id="section4b">
-                        <h2>Somatic Therapy</h2>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Re magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco. Re magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
-                        <button class="section4Buttons" id="section4bButton">LEARN MORE</button>    
+                        <h2>Atașament anxios </h2>
+                        <p> Se dezvoltă când parintele este inconsistent: uneori prezent, alteori respingător. <br> Copilul devine nesigur, hipervigilent, căutând constant aprobarea. <br> În <b>viața adultă</b>: frică de abandon, dependență emoțională, gelozie, atașamente toxice. </p>
+                        <img src="imagini/atasamentAnxios.jpg" height="200" width="200" alt="atasamentAnxios" id="section4bImg" class="section4boxImages">
+                        <!-- <button class="section4Buttons" id="section4bButton">LEARN MORE</button>    -->
                     </div>
                     <div id="section4c">
-                        <h2>Grief & Loss</h2>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Re magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco. Re magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
-                        <button class="section4Buttons" id="section4cButton">LEARN MORE</button> 
+                        <h2>Atașament evitant </h2>
+                        <p> Se formează când părintele este distant, rece sau respinge manifestările emoționale. <br> Copilul învață să-și suprime emoțiile și să se bazeze doar pe sine. <br> În <b>viața adultă</b>: dificultăți în intimitate, evitare a conflictelor, refuzul vulnerabilității. </p>
+                        <img src="imagini/atasamentEvitant.jpg" height="200" width="200" alt="atasamentEvitant" id="section4cImg" class="section4boxImages">
+                        <!-- <button class="section4Buttons" id="section4cButton">LEARN MORE</button>  -->
+                    </div>
+                    <div id="section4d">
+                        <h2>Atașament dezorganizat </h2>
+                        <p> Asociat cu traume severe sau abuzuri <br> Părintele este perceput ca sursă de frică și siguranță în același timp. <br> În <b>viața adultă</b>: comportamente haotice, dificultăți majore în relații, tulburări de personalitate. </p>
+                        <img src="imagini/atasamentDezorganizat.jpg" height="200" width="200" alt="atasamentDezorganizat" id="section4dImg" class="section4boxImages">
+                        <!-- <button class="section4Buttons" id="section4dButton">LEARN MORE</button>  -->
                     </div>
                 </div>
             </div>
@@ -135,7 +183,6 @@
             <div id="section5">
                 <h3>What you need now is <i>ease</i>. I'm here to help you <i>simplify</i> the process as you begin your journey.</h3>
                 <div id="section5box">
-
                     <div class="section5box1">
                         <div id="section5box1a">
                             <h3>Get in touch.</h3>
@@ -178,13 +225,13 @@
                 
                     <form id="section6bForm">
                         <label for="firstname">Prenume:</label>
-                        <input type="text" id="firstname" name="firstname" />
+                        <input type="text" id="firstname" name="firstname" >
 
                         <label for="lastname">Nume:</label>
-                        <input type="text" id="lastname" name="lastname" /><br>
+                        <input type="text" id="lastname" name="lastname" ><br>
 
                         <label for="email">Email</label>
-                        <input type="text" id="email" name="email" /><br>
+                        <input type="text" id="email" name="email" ><br>
 
                         <label for="message">Message:</label>
                         <textarea id="message"></textarea><br>
@@ -245,9 +292,38 @@
                 </div>
 
                 <div id="section9b">
-                    <table id="section9bTabelPersoane"></table>
+                    <table class="section9bTable" id="section9bTabelPersoane"></table>
                 </div>
             </div>  
+
+            <div id="section10">
+                <div class="section10a" id="section10input">
+                    <label for="positionInput">Poziția:</label>
+                    <input type="number" id="positionInput" min="0" placeholder="Ex: 1"><br>
+
+                    <label for="colorInput">Alege o culoare:</label>
+                    <input type="color" id="colorInput" value="#f0f0f0"><br>
+
+                    <button id="insertRow" onclick="insertRow()">Inserează linie</button>
+                    <button id="insertColumn" onclick="insertColumn()">Inserează coloană</button>
+                </div>
+
+                <table id="section10table">
+                    <caption> Tabel </caption>
+                    <tr>
+                        <th>Info1</th>
+                        <th>Info2</th>
+                    </tr>
+                    <tr>
+                        <td>Data1</td>
+                        <td>Data2</td>
+                    </tr>
+                    <tr>
+                        <td>Data3</td>
+                        <td>Data4</td>
+                    </tr>
+                </table>
+            </div>
             <p></p>
         </div>
     </div>
