--- a/continut/inregistreaza.html
+++ b/continut/inregistreaza.html
@@ -1,3 +1,4 @@
+<!--
 <div id="section6">
     <div id="section6a">
         <div class="section6aElements">
@@ -38,8 +39,8 @@
     </div>
 </div>
 
-
-<form>
+-->
+<form id="formular" method="POST" action="inregistreaza.html">
 
     <fieldset>
         <legend>Informatii generale</legend>
@@ -107,5 +108,5 @@
     <input type="checkbox" id="condition" name="condition" />
     <label for="condition">Sunt de acord cu conditiile</label><br>
 
-    <button type="submit" disabled>Inregistreaza</button><br>
+    <button type="submit">Inregistreaza</button><br>
 </form>
