lab8 tema1 (salvare produse in local storage) finalizata

--- a/continut/index.html
+++ b/continut/index.html
@@ -16,9 +16,11 @@
             <a href="#" onclick="schimbaContinut('video')">VIDEO</a> 
             <a href="#" onclick="schimbaContinut('despre')">DESPRE</a> 
             <a href="#" onclick="schimbaContinut('desen')">DESEN</a>
-            <a href="#" onclick="schimbaContinut('invat', 'js/script.js', 'setupCanvasDrawing')">INVAT</a>
+            <a href="#" onclick="schimbaContinut('invat', 'js/script.js', 'actualizareSectiuni')">INVAT</a>
             <a href="#" onclick="schimbaContinut('persoane', 'js/persoane.js', 'incarcaPersoane')">PERSOANE</a>
             <a href="#" onclick="schimbaContinut('verifica', 'js/verifica.js', 'verificaUtilizator')">VERIFICA</a>
+            <a href="#" onclick="schimbaContinut('cumparaturi', 'js/cumparaturi.js', 'initCumparaturi')">CUMPARATURI</a>
+
         </div>
 
         <div class="header" id="headerContinut">
