--- a/continut/inregistreaza.html
+++ b/continut/inregistreaza.html
@@ -90,22 +90,22 @@
         </select><br>
 
         <label for="birthdate">Data nasterii</label>
-        <input type="date" id="birthdate" name="birthdate" /><br>
+        <input type="date" id="birthdate" name="birthdate"><br>
 
         <label for="birthtime">Ora nasterii</label>
-        <input type="time" id="birthtime" name="birthtime" /><br>
+        <input type="time" id="birthtime" name="birthtime"><br>
 
         <label for="age">Varsta (10-80)</label>
         <input type="range" id="age" name="age" min="10" max="80" /><br>
 
         <label for="homepage">Adresa paginii personale: </label>
-        <input type="url" id="homepage" name="homepage" /><br>
+        <input type="url" id="homepage" name="homepage"><br>
 
         <label for="description">Descriere:</label>
         <textarea id="description"></textarea><br>
     </fieldset><br>
 
-    <input type="checkbox" id="condition" name="condition" />
+    <input type="checkbox" id="condition" name="condition">
     <label for="condition">Sunt de acord cu conditiile</label><br>
 
     <button type="submit">Inregistreaza</button><br>
